<resources>
    <string name="app_name">TastyMeal</string>
    <string name="log_name">Войти</string>
    <string name="password">Введите пароль</string>
    <string name="phone_number">Введите номер телефона</string>
    <string name="logo_name">TastyMeal</string>
    <string name="meal_icon">meal</string>
    <string name="no_account">У вас нет аккаунта?</string>
    <string name="registr">Зарегистрируйтесь.</string>
    <string name="registration">Регистрация</string>
    <string name="rep_password">Подтвердите пароль</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="back_icon">back</string>
    <string name="main">Главное</string>
    <string name="reserve">Резерв</string>
    <string name="menu">Меню</string>
    <string name="orders">Заказы</string>
    <string name="profile">Профиль</string>\
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="logout">Выйти</string>
    <string name="basket">Корзина</string>
    <string name="scroll_menu">Скролл меню</string>
    <string name="scroll_main">Скролл главное</string>
    <string name="scroll_orders">Скролл заказы</string>
    <string name="table">Столик №</string>
    <string name="cicle">окружность</string>
    <string name="Reserve_date">Дата брони:</string>
    <string name="about_order">О заказе</string>
    <string name="Add">Добавить</string>
    <string name="active_order">Активен</string>
    <string name="your_order">Ваш заказ</string>
    <string name="place_an_order">Оформить заказ</string>
    <string name="news_menu">Новости</string>
    <string name="menu_menu">Меню</string>
    <string name="geo_menu">Карта</string>
    <string name="user_menu">Кабинет</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="forget_pass">Забыли пароль?</string>
    <string name="sign_in_with">Войти с помощью</string>
    <string name="vkontakte">Вконтакте</string>
    <string name="google">Google</string>
    <string name="pass_recovery">Восстановление пароля</string>
    <string name="code_from_message">Код из сообщения</string>
    <string name="code">Код</string>
    <string name="pass_confirm">Подтверждение пароля</string>
    <string name="recovery">Восстановить</string>
    <string name="addresses">Наши адреса</string>
    <string name="season_menu">Сезонное</string>
    <string name="liked_menu">Избранное</string>
    <string name="classic_menu">Стандарт</string>
    <string name="baked_menu">Выпечка</string>
    <string name="news">Новости</string>
    <string name="person">Личный кабинет</string>
    <string name="person_name_and_firstname">Name Firstname</string>
    <string name="person_phone_number">+7 (999) 999-99-99</string>
    <string name="loyalty_program">Программа лояльности</string>
    <string name="orders_history">История заказов</string>
    <string name="exit">Выйти</string>
    <string name="order_number_text">Заказ №</string>
    <string name="num_order">0000001</string>
    <string name="product">Товар</string>
    <string name="cost">Цена</string>
    <string name="list_product">Капучино\nЛатте\nКруасан</string>
    <string name="list_cost">200p\n180p\n59p</string>
    <string name="final_cost">Общая стоимость</string>
    <string name="num_final_cost">439p</string>
    <string name="name_product">Капучино</string>
    <string name="cost_name_product">100p</string>
    <string name="add_in_cart">Добавить в корзину</string>
    <string name="add_in_liked">Добавить в избранное</string>
    <string name="name_menu_elem">Name Menu Element</string>
    <string name="choose_syrup">Выберите сироп</string>
    <string name="back">Назад</string>
    <string name="description">Описание</string>
    <string name="name_news">Новости</string>
    <string name="date_news">date</string>
    <string name="information_of_loyalty">Программа лояльности — система поощрения
        постоянных покупателей: за приверженность компании
        клиенты получают скидки и бонусы. </string>
    <string name="close">Закрыть</string>
    <string name="firstname">Фамилия</string>
    <string name="date_birthday">Дата рождения</string>
    <string name="final_reg">Зарегистрироваться</string>
    <string name="menu_elem_counter">1</string>
    <string name="news_description">Описание новости</string>
    <string name="news_header">Заголовок новости</string>
    <string name="final_int_cost">0p</string>
    <string name="pay">Оплатить</string>
    <string name="cart">Корзина</string>
    <string name="syrop">Сироп:</string>
    <string name="cost_with_dvoetochie">Стоимость:</string>
    <string name="final_cart_cost">21313p</string>
    <string name="witpout_syrop">Без сиропа</string>
    <string name="Email">Почта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>