<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_main"
        android:enabled="true"
        android:icon="@drawable/ic_main"
        android:title="@string/main"/>
    <item
        android:id="@+id/page_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"/>
    <item
        android:id="@+id/page_reserve"
        android:enabled="true"
        android:icon="@drawable/ic_reserve"
        android:title="@string/reserve"/>

    <item
        android:id="@+id/page_orders"
        android:enabled="true"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders"/>
    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>