<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="240dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/ubuntu"
        android:text="@string/log_name"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationLog"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogo"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/logo_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <ImageView
        android:id="@+id/LogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/meal_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textLogo"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/ic_logotype" />

    <TextView
        android:id="@+id/NoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/no_account"
        android:textColor="#455A64"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/RegistrationLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/registr"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:onClick="reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoAccount"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
