<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">


    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogo"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextNamePassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ubuntu"
        android:hint="Введите ваше имя"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="240dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/ubuntu"
        android:text="@string/registration_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNamePassword"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="backLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/ic_arrow_left_solid_1"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/back_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>